@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-26T08:15:01Z",
-  "count_outdated" : 417,
-  "uniques_outdated" : 225,
-  "count" : 438,
+  "timestamp" : "2022-07-26T16:16:43Z",
+  "count_outdated" : 419,
+  "uniques_outdated" : 226,
+  "count" : 440,
   "uniques" : 237,
   "clones" : [
-    {
-      "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
